<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:padding="@dimen/margin_16">

  <TextView
      android:id="@+id/achtung_title"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="@dimen/text_size_40"
      android:textColor="@android:color/holo_red_light"
      android:layout_marginTop="@dimen/margin_32"
      android:padding="@dimen/margin_4"
      android:gravity="center_horizontal"
      android:textStyle="bold"
      android:text="@string/leistung_achtung_title"/>

  <TextView
      android:id="@+id/achtung_content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="@dimen/text_size_20"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/margin_8"
      android:gravity="center_horizontal"
      android:padding="@dimen/margin_4"
      android:text="@string/leistung_achtung_content"/>

  <TextView
      android:id="@+id/info_subtitle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="@dimen/text_size_32"
      android:textColor="@android:color/holo_red_light"
      android:layout_marginTop="@dimen/margin_32"
      android:gravity="center_horizontal"
      android:padding="@dimen/margin_4"
      android:textStyle="bold"
      android:text="@string/leistung_info_subtitle"/>

  <TextView
      android:id="@+id/info_content"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="@dimen/text_size_20"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/margin_8"
      android:gravity="center_horizontal"
      android:padding="@dimen/margin_4"
      android:text="@string/leistung_info_content"/>

</LinearLayout>