<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="@dimen/margin_16">

    <ImageView
        android:layout_width="@dimen/nav_header_height"
        android:layout_height="@dimen/nav_header_height"
        android:src="@drawable/drawer_banner"
        tools:src="@drawable/drawer_banner"
        android:layout_marginTop="@dimen/margin_16"
        android:scaleType="fitCenter"
        android:padding="@dimen/margin_8"/>

    <TextView
        android:id="@+id/office_timing_weekdays_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_20"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/margin_32"
        android:padding="@dimen/margin_4"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:text="@string/weekday_timings_label"/>

    <TextView
        android:id="@+id/office_timing_weekdays_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_16"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_4"
        android:text="@string/weekday_timings_value"/>

    <TextView
        android:id="@+id/office_timing_weekend_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_20"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/margin_32"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_4"
        android:textStyle="bold"
        android:text="@string/weekend_timings_label"/>

    <TextView
        android:id="@+id/office_timing_weekend_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_16"
        android:textColor="@android:color/black"
        android:layout_marginTop="@dimen/margin_8"
        android:gravity="center_horizontal"
        android:padding="@dimen/margin_4"
        android:text="@string/weekend_timings_value"/>



</LinearLayout>